"""
Unit tests for EnvelopeStorageServiceImpl.

Generated tests for proto-defined gRPC service implementation.
"""

import pytest
import grpc
from unittest.mock import Mock, patch, MagicMock
from concurrent import futures

from postfiat.services.impl.envelope_storage_impl import EnvelopeStorageServiceImpl
from postfiat.v3.messages_pb2_grpc import PostFiatEnvelopeStorageServiceServicer
from postfiat.v3.messages_pb2 import *
from a2a.v1.a2a_pb2 import *
from google.protobuf.empty_pb2 import Empty


class TestEnvelopeStorageServiceImpl:
    """EnvelopeStorageServiceImpl unit tests."""

    def setup_method(self):
        """Set up test fixtures."""
        self.service = EnvelopeStorageServiceImpl()
        self.context = Mock(spec=grpc.ServicerContext)

    def test_storeenvelope(self):
        """Test StoreEnvelope method."""
        # Create a proper mock request with expected attributes
        request = Mock()
        request.envelope = Mock()
        request.envelope.message_type = "test_message"
        request.envelope.content_hash = Mock()
        request.envelope.content_hash.hex = Mock(return_value="abcdef1234567890abcdef1234567890")
        request.envelope.version = 1
        request.envelope.encryption = 0
        request.envelope.message = b"test message"
        request.envelope.reply_to = ""
        request.envelope.metadata = {}
        request.preferred_storage = "redis"
        
        response = self.service.StoreEnvelope(request, self.context)
        assert response is not None
        assert hasattr(response, 'envelope_id')
        assert hasattr(response, 'storage_backend')

    def test_retrieveenvelope(self):
        """Test RetrieveEnvelope method."""
        # TODO: Implement RetrieveEnvelope test
        request = Mock()
        response = self.service.RetrieveEnvelope(request, self.context)
        assert response is not None

    def test_searchenvelopes(self):
        """Test SearchEnvelopes method."""
        # TODO: Implement SearchEnvelopes test
        request = Mock()
        response = self.service.SearchEnvelopes(request, self.context)
        assert response is not None

    def test_deleteenvelope(self):
        """Test DeleteEnvelope method."""
        # TODO: Implement DeleteEnvelope test
        request = Mock()
        response = self.service.DeleteEnvelope(request, self.context)
        assert response is not None

    def test_envelopeexists(self):
        """Test EnvelopeExists method."""
        # TODO: Implement EnvelopeExists test
        request = Mock()
        response = self.service.EnvelopeExists(request, self.context)
        assert response is not None

    def test_findenvelopesbycontenthash(self):
        """Test FindEnvelopesByContentHash method."""
        # TODO: Implement FindEnvelopesByContentHash test
        request = Mock()
        response = self.service.FindEnvelopesByContentHash(request, self.context)
        assert response is not None

    def test_findenvelopesbycontext(self):
        """Test FindEnvelopesByContext method."""
        # TODO: Implement FindEnvelopesByContext test
        request = Mock()
        response = self.service.FindEnvelopesByContext(request, self.context)
        assert response is not None

    def test_listenvelopesbysender(self):
        """Test ListEnvelopesBySender method."""
        # TODO: Implement ListEnvelopesBySender test
        request = Mock()
        response = self.service.ListEnvelopesBySender(request, self.context)
        assert response is not None

    def test_service_integration(self):
        """Test service integration."""
        # Create gRPC server
        server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
        
        # Add service to server
        from postfiat.v3.messages_pb2_grpc import add_PostFiatEnvelopeStorageServiceServicer_to_server
        add_PostFiatEnvelopeStorageServiceServicer_to_server(self.service, server)
        
        # Test server creation
        assert server is not None

    def test_with_mock_storage(self):
        """Test service with mocked storage."""
        mock_storage = Mock()
        service = EnvelopeStorageServiceImpl(store=mock_storage)
        assert service is not None

    def test_error_handling(self):
        """Test error handling."""
        # Test with invalid request
        request = Mock()
        request.configure_mock(**{"side_effect": Exception("Test error")})
        
        # Should handle errors gracefully
        # TODO: Add specific error handling tests
        pass

    def test_async_operations(self):
        """Test async operation wrappers."""
        # TODO: Test async operation wrappers
        pass

    def test_performance(self):
        """Test service performance."""
        import time
        
        # Test method performance
        start_time = time.time()
        
        # TODO: Add performance tests
        
        end_time = time.time()
        duration = end_time - start_time
        
        # Should complete within reasonable time
        assert duration < 1.0  # 1 second max


if __name__ == "__main__":
    pytest.main([__file__])